# catkin_clang_format

./: CMakeLists.txt  README.md  package.xml
catkin_format/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_format/cmake/: catkin_format-extras.cmake.em
catkin_format/cmake/backup/: catkin_format-extras.cmake.em
catkin_format/verbs/catkin_format/: __init__.py  cli.py
cmake/Modules/: ClangFormatMacros.cmake
cmake_clang_macros/: CMakeLists.txt  README.md  package.xml
cmake_clang_macros/cmake/: cmake_clang_macros-extras.cmake.installspace.in
